# prog2-2026-scribbles

./: .gitignore  README.md  pandas-showcase.ipynb  polars-showcase.ipynb  principles-1.ipynb  principles-2_PS.md  pyproject.toml  serialization-comparison.ipynb
