[project]
name = "principles"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "jupyter>=1.1.1",
    "jupyter-ruff>=0.3.1",
    "matplotlib>=3.10.8",
    "pandas>=3.0.1",
    "pyarrow>=23.0.1",
    "plotly[express]>=6.6.0",
    "polars>=1.38.1",
]

[dependency-groups]
dev = [
    "nbformat>=5.10.4",
    "ipykernel>=7.2.0",
    "ipywidgets>=8.1.8",
]
